# simio

./: .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
aio/net/tcp/: server.py  stream.py
aio/stream/: stream.py  utils.py
examples/: buffered_stream.py  https_client.py  tcp_client_stream.py  tcp_echo_server.py
simio/: __init__.py  tls.py
simio/net/: __init__.py  address.py  socket.py  typedef.py
simio/net/tcp/: __init__.py  server.py  socket.py  stream.py
simio/runtime/: __init__.py  task_group.py
simio/stream/: stream.py  utils.py
tests/: conftest.py  test_buffer.py  test_streams.py  test_tls.py  utils.py
tests/resources/: test.org.crt  test.org.key
